[gd_scene format=3 uid="uid://ccexg66yj5j51"]

[ext_resource type="Script" uid="uid://b47gy0i3grbxv" path="res://window_utils/border_window.gd" id="1_4daeo"]
[ext_resource type="Theme" uid="uid://cbu701eo6j6jo" path="res://themes/Modern11/Modern11.tres" id="2_mkn7c"]
[ext_resource type="PackedScene" uid="uid://dcou5544nsi5i" path="res://window_utils/tile_map_outline.tscn" id="3_vt1yh"]

[sub_resource type="GDScript" id="GDScript_7bnpc"]
script/source = "extends Window

@onready var camera_2d: Camera2D = $Camera2D

func _ready() -> void:
	transient = true
	
func _process(_delta: float) -> void:
	camera_2d.position = position
"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lytty"]
size = Vector2(500, 500)

[node name="BorderWindow" type="Node" unique_id=304158618]
script = ExtResource("1_4daeo")

[node name="Window" type="Window" parent="." unique_id=169679679]
oversampling_override = 1.0
initial_position = 1
size = Vector2i(1280, 720)
theme = ExtResource("2_mkn7c")
script = SubResource("GDScript_7bnpc")

[node name="Camera2D" type="Camera2D" parent="Window" unique_id=979188739]
anchor_mode = 0

[node name="TileMapLayer" parent="Window/Camera2D" unique_id=1377398748 instance=ExtResource("3_vt1yh")]

[node name="Area2D" type="Area2D" parent="." unique_id=913116292]
collision_mask = 8193

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" unique_id=980279914]
shape = SubResource("RectangleShape2D_lytty")

[connection signal="size_changed" from="Window" to="." method="_on_window_size_changed"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
